# agentic-sms-gateway

./: .gitignore  LICENSE  README.md
.claude/: launch.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml
.preview/: screens.html
android/: build.gradle.kts  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  google-services.json.example  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/agentic/smsbridge/: MainActivity.kt  SmsBridgeApplication.kt
android/app/src/main/java/com/agentic/smsbridge/data/: BridgeConfig.kt  BridgeRepository.kt  PreferencesRepository.kt
android/app/src/main/java/com/agentic/smsbridge/di/: AppModule.kt
android/app/src/main/java/com/agentic/smsbridge/model/: BridgeMessage.kt  ConnectionState.kt
android/app/src/main/java/com/agentic/smsbridge/receiver/: BootReceiver.kt  SmsBridgeFcmService.kt  SmsReceiver.kt
android/app/src/main/java/com/agentic/smsbridge/service/: BridgeService.kt  SmsHandler.kt  WebSocketClient.kt
android/app/src/main/java/com/agentic/smsbridge/ui/dashboard/: DashboardScreen.kt  DashboardViewModel.kt
android/app/src/main/java/com/agentic/smsbridge/ui/navigation/: NavGraph.kt
android/app/src/main/java/com/agentic/smsbridge/ui/onboarding/: OnboardingScreen.kt  OnboardingViewModel.kt
android/app/src/main/java/com/agentic/smsbridge/ui/settings/: SettingsScreen.kt  SettingsViewModel.kt
android/app/src/main/java/com/agentic/smsbridge/ui/theme/: Theme.kt
android/app/src/main/res/drawable/: ic_bridge_notification.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/raw/: sms_bridge_cert.pem
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/xml/: network_security_config.xml
android/gradle/: libs.versions.toml
docs/: android-feature-spec.md  android-setup.md  architecture.md  flows.md  mcp-integration.md
server/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/src/sms_bridge/: __init__.py  __main__.py  cli.py  config.py  config_store.py  main.py
server/src/sms_bridge/fcm/: __init__.py  client.py
server/src/sms_bridge/mcp/: qr.py  server.py
server/src/sms_bridge/queue/: __init__.py  file_queue.py
server/src/sms_bridge/router/: __init__.py  message_router.py
server/src/sms_bridge/websocket/: server.py
server/tests/: test_file_queue.py  test_message_router.py
